--- a/index.html
+++ b/index.html
@@ -1,57 +1,93 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>子美的个人主页</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://img.zimei.xyz/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
+  <meta name="keywords" content="前端开发,Java后端开发,嵌入式开发,大数据开发,数据结构,算法题,leetcode,开源,代码,C语言,计算机网络,操作系统,设计模式,编译原理,计算机组成原理,C++,Spring,Spring Boot,Spring Cloud,Redis,MongoDB,Linux,JVM,IDEA,Docker,Git,SVN,Node,Python,MySQL,Tomcat,Nginx,Kubernetes,Elasticsearch,Kafka,程序员,分布式,微服务,大数据,开发者,编程,">
+  <meta name="description" content="本站内容主要包含但不限于：Java后端、前端开发、嵌入式开发、大数据开发、数据结构、算法题、leetcode、计算机网络、操作系统、设计模式、编译原理、计算机组成原理、C语言、C++、Spring Boot、Spring Cloud、Git、SVN、Linux、Node、IDEA、Python、MySQL、Redis、Tomcat、Nginx、Kubernetes、Elasticsearch、Kafka、微服务分布式、高可用架构、中间件、数据库、缓存、消息队列、系统监控等知识分享。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="icon" href="https://img.zimei.xyz/favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/css/vue.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/css/style.css">
+
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?1084c6133cb35e15fffea07710a0d662";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    
 </head>
 
 <body>
-  <div id="app"><strong>正在加载中……</strong><br>
+  <div id="app">
+    <strong>正在加载中……</strong><br>
     <p style="font-size:20px">初次加载可能较慢，请耐心等待<br>若长时间无变化请尝试刷新网页</p>
   </div>
   <script>
     window.$docsify = {
       name: 'myblog',
       repo: 'https://github.com/zimei11/MyBlog',
-      coverpage: true,
-      loadNavbar: true
+      loadNavbar: true,    
+      coverpage: true,     
+      onlyCover: false,
+      auto2top: true,
+      logo: 'http://img.zimei.xyz/202201281508363.png',
+      nameLink: 'https://www.zimei.xyz/', 
+
+      'flexible-alerts': {
+        style: 'flat'
+      },
+
+      darkMode: {
+        light: {
+          toggleBtnBg: '#42b983'
+        }
+      },
+
+      plugins: [
+        function (hook) {
+          var footer = [
+            '<hr/>',
+            '<footer style="text-align: center">',
+              '<p>',
+              '<img src="http://img.zimei.xyz/202201281508363.png" alt="zimei" >',
+            '</p>',
+            '<span><a href="https://beian.miit.gov.cn/" style="font-size:80%;color:#939393;" target="_blank">苏ICP备2021049515号-1</a></span><span>  •  </span><span><img src="https://img.zimei.xyz/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" height="15px" width="15px" /><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32030302000933" style="font-size:80%;color:#939393;" target="_blank">苏公网安备 32030302000933号</a></span>',
+            '<p>',
+            'Hosted By <span><a href="https://www.aliyun.com/minisite/goods?taskPkg=1212cpz&pkgSid=182176&userCode=eso7wf2g" style="font-size:80%;color:blue;" target="_blank">Aliyun ECS</a></span>.',
+            '</p>',
+            '</footer>'
+          ].join('');
+          hook.afterEach(function (html) {
+            var isReadme = window.location.href.indexOf("README");
+            if (isReadme === -1) {
+              // return header + html + footer;
+              return html + footer;
+            } else {
+              return html + footer;
+            }
+          });
+        }
+      ]
+
     }
   </script>
-  <!-- Docsify v4 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify@4.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-example-panels.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-tabs@1.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-plugin-flexible-alerts.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/pdfobject.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-pdf-embed.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-themeable.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/zoom-image.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/index.js"></script>
+
 </body>
-<!--<footer style="text-align: center">
-  <p><img src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/img/r2coding_logo_sidebar.1na4hwjnopq8.png"
-      alt="r2coding" class="medium-zoom-image"></p><span><a href="https://beian.miit.gov.cn/"
-      style="font-size:80%;color:#939393;" target="_blank">苏ICP备2021049515号-1</a></span><span> • </span><span><img
-      src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/img/beian.5m919tgd7vw0.png" height="15px"
-      width="15px" class="medium-zoom-image"><a
-      href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32030302000933"
-      style="font-size:80%;color:#939393;" target="_blank">苏公网安备 32030302000933号</a></span>
-  <p>Copyright © 2021 <span><a href="https://mp.weixin.qq.com/s/ePhaYezFblgt0NgbvtWqww"
-        style="font-size:80%;color:blue;" target="_blank">CodeSheep</a></span> , All rights reserved. Hosted By
-    <span><a href="https://www.aliyun.com/minisite/goods?taskPkg=1212cpz&amp;pkgSid=182176&amp;userCode=eso7wf2g"
-        style="font-size:80%;color:blue;" target="_blank">Aliyun ECS</a></span>.
-  </p>
-</footer>-->
-
 </html>
-
-<!-- Github Corner 
-<a href="https://github.com/zimei11/MyBlog" title="project_code" target="_blank" class="github-corner"
-  aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250"
-    style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
-    <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-    <path
-      d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-      fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-    <path
-      d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-      fill="currentColor" class="octo-body"></path>
-  </svg></a>-->
