--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>子美的个人主页</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="keywords" content="前端开发,Java后端开发,嵌入式开发,大数据开发,数据结构,算法题,leetcode,开源,代码,C语言,计算机网络,操作系统,设计模式,编译原理,计算机组成原理,C++,Spring,Spring Boot,Spring Cloud,Redis,MongoDB,Linux,JVM,IDEA,Docker,Git,SVN,Node,Python,MySQL,Tomcat,Nginx,Kubernetes,Elasticsearch,Kafka,程序员,分布式,微服务,大数据,开发者,编程,">
-  <meta name="description" content="本站内容主要包含但不限于：Java后端、前端开发、嵌入式开发、大数据开发、数据结构、算法题、leetcode、计算机网络、操作系统、设计模式、编译原理、计算机组成原理、C语言、C++、Spring Boot、Spring Cloud、Git、SVN、Linux、Node、IDEA、Python、MySQL、Redis、Tomcat、Nginx、Kubernetes、Elasticsearch、Kafka、微服务分布式、高可用架构、中间件、数据库、缓存、消息队列、系统监控等知识分享。">
+  <meta name="keywords"
+    content="前端开发,Java后端开发,嵌入式开发,大数据开发,数据结构,算法题,leetcode,开源,代码,C语言,计算机网络,操作系统,设计模式,编译原理,计算机组成原理,C++,Spring,Spring Boot,Spring Cloud,Redis,MongoDB,Linux,JVM,IDEA,Docker,Git,SVN,Node,Python,MySQL,Tomcat,Nginx,Kubernetes,Elasticsearch,Kafka,程序员,分布式,微服务,大数据,开发者,编程,">
+  <meta name="description"
+    content="本站内容主要包含但不限于：Java后端、前端开发、嵌入式开发、大数据开发、数据结构、算法题、leetcode、计算机网络、操作系统、设计模式、编译原理、计算机组成原理、C语言、C++、Spring Boot、Spring Cloud、Git、SVN、Linux、Node、IDEA、Python、MySQL、Redis、Tomcat、Nginx、Kubernetes、Elasticsearch、Kafka、微服务分布式、高可用架构、中间件、数据库、缓存、消息队列、系统监控等知识分享。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="icon" href="https://img.zimei.xyz/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/css/vue.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/css/style.css">
-
+  <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/css/style.css">
+  -->
   <script>
     var _hmt = _hmt || [];
-    (function() {
+    (function () {
       var hm = document.createElement("script");
       hm.src = "https://hm.baidu.com/hm.js?1084c6133cb35e15fffea07710a0d662";
-      var s = document.getElementsByTagName("script")[0]; 
+      var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
-    </script>
-    
+  </script>
+
 </head>
 
 <body>
@@ -33,30 +35,30 @@
     window.$docsify = {
       name: 'myblog',
       repo: 'https://github.com/zimei11/MyBlog',
-      loadNavbar: true,    
-      coverpage: true,     
+      loadNavbar: true,
+      coverpage: true,
       onlyCover: false,
       auto2top: true,
       logo: 'http://img.zimei.xyz/202201281508363.png',
-      nameLink: 'https://www.zimei.xyz/', 
+      nameLink: 'https://www.zimei.xyz/',
 
       'flexible-alerts': {
         style: 'flat'
       },
 
-      darkMode: {
+      /*darkMode: {
         light: {
           toggleBtnBg: '#42b983'
         }
-      },
+      },*/
 
       plugins: [
         function (hook) {
           var footer = [
             '<hr/>',
             '<footer style="text-align: center">',
-              '<p>',
-              '<img src="http://img.zimei.xyz/202201281508363.png" alt="zimei" >',
+            '<p>',
+            '<img src="http://img.zimei.xyz/202201281508363.png" alt="zimei" >',
             '</p>',
             '<span><a href="https://beian.miit.gov.cn/" style="font-size:80%;color:#939393;" target="_blank">苏ICP备2021049515号-1</a></span><span>  •  </span><span><img src="https://img.zimei.xyz/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" height="15px" width="15px" /><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32030302000933" style="font-size:80%;color:#939393;" target="_blank">苏公网安备 32030302000933号</a></span>',
             '<p>',
@@ -82,12 +84,13 @@
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify@4.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-example-panels.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-tabs@1.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-plugin-flexible-alerts.min.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-plugin-flexible-alerts.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/pdfobject.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-pdf-embed.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-themeable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/zoom-image.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/index.js"></script>
 
 </body>
+
 </html>
