添加搜索框

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       logo: 'http://img.zimei.xyz/202201281508363.png',
       nameLink: 'https://www.zimei.xyz/',
 
+      search: {
+        paths: 'auto',
+        placeholder: '搜索',
+        noData: '找不到结果😕',
+        depth: 3,
+      },
+
       'flexible-alerts': {
         style: 'flat'
       },
@@ -90,6 +97,8 @@
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-pdf-embed.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-themeable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/zoom-image.min.js"></script>
+
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 
 </body>
 
