--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
       auto2top: true,
       logo: 'http://img.zimei.xyz/202201281508363.png',
       nameLink: 'https://www.zimei.xyz/',
-
+      search: {
+        paths: 'auto',
+        placeholder: '搜索',
+        noData: '找不到结果',
+        depth: 3,
+      },
       'flexible-alerts': {
         style: 'flat'
       },
@@ -90,7 +95,7 @@
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-pdf-embed.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-themeable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/zoom-image.min.js"></script>
-
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 
 </html>
