添加站长统计，copy声明

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             '</p>',
             '<span><a href="https://beian.miit.gov.cn/" style="font-size:80%;color:#939393;" target="_blank">苏ICP备2021049515号-1</a></span><span>  •  </span><span><img src="https://img.zimei.xyz/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" height="15px" width="15px" /><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32030302000933" style="font-size:80%;color:#939393;" target="_blank">苏公网安备 32030302000933号</a></span>',
             '<p>',
-            'Hosted By <span><a href="https://www.aliyun.com/minisite/goods?taskPkg=1212cpz&pkgSid=182176&userCode=eso7wf2g" style="font-size:80%;color:blue;" target="_blank">Aliyun ECS</a></span>.',
+            'Copyright © 2021 <span><a href="https://mp.weixin.qq.com/s/mIw95oCmWvQ4DtPSJ18hjA" style="font-size:80%;color:blue;" target="_blank">子美</a></span>, All rights reserved. Hosted By <span><a href="https://www.aliyun.com/minisite/goods?taskPkg=1212cpz&pkgSid=182176&userCode=eso7wf2g" style="font-size:80%;color:blue;" target="_blank">Aliyun ECS</a></span>.',
             '</p>',
             '</footer>'
           ].join('');
@@ -97,9 +97,10 @@
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-pdf-embed.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/docsify-themeable.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/js/zoom-image.min.js"></script>
-
+  <!--搜索-->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
-
+  <!--站长统计-->
+  <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280819730'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1280819730%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 
 </html>
