--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
   <div id="app">
     <strong>正在加载中……</strong><br>
     <p style="font-size:20px">初次加载可能较慢，请耐心等待<br>若长时间无变化请尝试刷新网页</p>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <hr/>
+    <footer style="text-align: center">
+    <span><a href="https://beian.miit.gov.cn/" style="font-size:80%;color:#939393;" target="_blank">苏ICP备2021049515号-1</a></span><span>  •  </span><span><img src="https://img.zimei.xyz/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" height="15px" width="15px" /><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32030302000933" style="font-size:80%;color:#939393;" target="_blank">苏公网安备 32030302000933号</a></span>
+    <p>
+    Copyright © 2021 <span><a href="https://mp.weixin.qq.com/s/mIw95oCmWvQ4DtPSJ18hjA" style="font-size:80%;color:blue;" target="_blank">子美</a></span>, All rights reserved. Hosted By <span><a href="https://www.aliyun.com/minisite/goods?taskPkg=1212cpz&pkgSid=182176&userCode=eso7wf2g" style="font-size:80%;color:blue;" target="_blank">Aliyun ECS</a></span>.
+    </p>
+    </footer>
   </div>
   <script>
     window.$docsify = {
