--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description"
     content="本站内容主要包含但不限于：Java后端、前端开发、嵌入式开发、大数据开发、数据结构、算法题、leetcode、计算机网络、操作系统、设计模式、编译原理、计算机组成原理、C语言、C++、Spring Boot、Spring Cloud、Git、SVN、Linux、Node、IDEA、Python、MySQL、Redis、Tomcat、Nginx、Kubernetes、Elasticsearch、Kafka、微服务分布式、高可用架构、中间件、数据库、缓存、消息队列、系统监控等知识分享。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="icon" href="https://img.zimei.xyz/favicon.ico">
+  <link rel="icon" href="https://img.zimei.fun/favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/css/vue.css">
   <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/justacoder99/r2coding@master/css/style.css">
   -->
@@ -39,8 +39,8 @@
       coverpage: true,
       onlyCover: false,
       auto2top: true,
-      logo: 'http://img.zimei.xyz/202201281508363.png',
-      nameLink: 'https://www.zimei.xyz/',
+      logo: 'http://img.zimei.fun/202201281508363.png',
+      nameLink: 'https://www.zimei.fun/',
       search: {
         paths: 'auto',
         placeholder: '搜索',
@@ -63,9 +63,9 @@
             '<hr/>',
             '<footer style="text-align: center">',
             '<p>',
-            '<img src="http://img.zimei.xyz/202201281508363.png" alt="zimei" >',
+            '<img src="http://img.zimei.fun/202201281508363.png" alt="zimei" >',
             '</p>',
-            '<span><a href="https://beian.miit.gov.cn/" style="font-size:80%;color:#939393;" target="_blank">苏ICP备2021049515号-1</a></span><span>  •  </span><span><img src="https://img.zimei.xyz/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" height="15px" width="15px" /><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32030302000933" style="font-size:80%;color:#939393;" target="_blank">苏公网安备 32030302000933号</a></span>',
+            '<span><a href="https://beian.miit.gov.cn/" style="font-size:80%;color:#939393;" target="_blank">苏ICP备2021049515号-1</a></span><span>  •  </span><span><img src="https://img.zimei.fun/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" height="15px" width="15px" /><a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=32030302000933" style="font-size:80%;color:#939393;" target="_blank">苏公网安备 32030302000933号</a></span>',
             '<p>',
             'Hosted By <span><a href="https://www.aliyun.com/minisite/goods?taskPkg=1212cpz&pkgSid=182176&userCode=eso7wf2g" style="font-size:80%;color:blue;" target="_blank">Aliyun ECS</a></span>.',
             '</p>',
